<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunningApp</string>
    <string name="action_settings">Settings</string>

    //starting page
    <string name="btn_run"> Run </string>
    <string name="btn_results"> Results </string>
    <string name="btn_settings"> Settings </string>

    //run route page
    <string name="btn_start_run"> Start </string>
    <string name="btn_pause_run"> Pause </string>
    <string name="btn_stop_run"> Stop </string>
    <string name="track_time"> Time: </string>
    <string name="track_distance"> Distance: </string>

    //temporary results page
    <string name="results_time"> Time: </string>
    <string name="results_distance"> Distance: </string>
    <string name="results_average_mile"> Average Mile: </string>
    <string name="results_calories"> Calories: </string>
    <string name="btn_historical_results"> Historical Results </string>

    //settings page
    <string name="user_name"> Name: </string>
    <string name="user_age"> Age: </string>
    <string name="user_weight"> Weight: </string>
    <string name="user_height"> Height: </string>
    <string name="btn_reset"> Reset </string>
    <string name="btn_done"> Done </string>

    <string name="title_activity_run">Run</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_historical_results">HistoricalResults</string>

</resources>
