<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.whitworth.app.Settings$PlaceholderFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_marginTop="55dp"
        android:textSize="48dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/userAge"
        android:layout_below="@+id/userName"
        android:textSize="48dp"
        android:layout_toRightOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/userWeight"
        android:textSize="48dp"
        android:layout_below="@+id/userAge"
        android:layout_alignLeft="@+id/userAge"
        android:layout_alignStart="@+id/userAge" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/userHeight"
        android:layout_below="@+id/userWeight"
        android:textSize="48dp"
        android:layout_toRightOf="@+id/textView4" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:padding="10dp"
        android:layout_below="@+id/userHeight"
        android:layout_alignRight="@+id/userHeight"
        android:layout_alignEnd="@+id/userHeight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Workout Time:"
        android:id="@+id/textView"
        android:textSize="48dp"
        android:layout_alignBottom="@+id/timePicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textSize="48dp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="48dp"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/userName"
        android:layout_alignTop="@+id/userName"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_age"
        android:layout_alignTop="@+id/userAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="48dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_above="@+id/userWeight"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_weight"
        android:id="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="48dp"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_above="@+id/userHeight"
        android:layout_alignTop="@+id/userWeight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_height"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="48dp"
        android:layout_above="@+id/timePicker"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:id="@+id/btnReset"
        android:textSize="48dp"
        android:minWidth="200dp"
        android:padding="10dp"
        android:textColor="#fffafa"
        android:background="#99ccff"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_done"
        android:id="@+id/btnDone"
        android:textSize="48dp"
        android:minWidth="200dp"
        android:padding="10dp"
        android:textColor="#fffafa"
        android:background="#99ccff"
        android:layout_alignTop="@+id/btnReset"
        android:layout_toRightOf="@+id/textView" />


</RelativeLayout>
